authentication ui done

--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     height: 74px;
+    box-shadow: 0 0 1px #b3b3b3;
     .navbar-brand{
         height: 100%;
     }
